plugins {
    id 'java'
}

import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform

group = 'io.codetoil'
version = '0.1.0-SNAPSHOT'

project.ext.asmVersion = "9.8"
project.ext.lwjglVersion = "3.3.6"
project.ext.junitVersion = "5.12.2"
project.ext.jomlVersion = "1.10.8"
project.ext.tinyLoggerVersion = "2.7.0"
project.ext.quiltLoaderVersion = "0.29.0-beta.5"
project.ext.tinyMappingsParserVersion = "0.3.0+build.17"
project.ext.tinyRemapperVersion = "0.11.1"
project.ext.accessWidenerVersion = "2.1.0"
project.ext.spongeMixinVersion = "0.15.5+mixin.0.8.7"
project.ext.gsonVersion = "2.13.1"
project.ext.guavaVersion = "33.4.8-jre"
project.ext.quiltJson5Version = "1.0.4+final"
project.ext.quiltConfigVersion = "1.3.2"
project.ext.quiltLoaderJUnitVersion = "0.29.0-beta.5"
project.ext.mixinExtrasVersion = "0.4.1"
project.ext.modLauncherVersion = "11.0.4"

static String getLWJGLNativesName()
{
    String lwjglNatives = null

    if (DefaultNativePlatform.currentOperatingSystem.linux) {
        def osArch = System.getProperty("os.arch")
        lwjglNatives = osArch.startsWith("arm") || osArch.startsWith("aarch64")
                ? "natives-linux-${osArch.contains("64") || osArch.startsWith("armv8") ? "arm64" : "arm32"}"
                : "natives-linux"
    }
    if (DefaultNativePlatform.currentOperatingSystem.macOsX) {
        lwjglNatives = System.getProperty("os.arch").startsWith("aarch64") ? "natives-macos-arm64" : "natives-macos"
    }
    if (DefaultNativePlatform.currentOperatingSystem.windows) {
        def osArch = System.getProperty("os.arch")
        lwjglNatives = osArch.contains("64")
                ? "natives-windows${osArch.startsWith("aarch64") ? "-arm64" : ""}"
                : "natives-windows-x86"
    }
    return lwjglNatives
}

subprojects {
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
        maven {
            url = "https://maven.fabricmc.net/"
        }
        maven {
            url = "https://maven.quiltmc.org/repository/release/"
        }
        maven {
            url = "https://maven.neoforged.net/releases"
        }
    }
}

dependencies {}